@@ -12,6 +12,7 @@
 - added comments to Macros in the form `// comment`
 - fixed auto-closing of WebSocket
 - fixed removing of API routes
+- added `controller.jsonstring(str, [headers])` method
 
 ========================
 0.0.56
